[gd_scene load_steps=4 format=2]

[ext_resource path="res://items/magic_shotshell/magic_shotshell.gd" type="Script" id=1]
[ext_resource path="res://projectiles/magic_shotshell_projectile/magic_shotshell_projectile.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 91.01

[node name="MagicShotshell" type="Node2D"]
script = ExtResource( 1 )
spell_scene = ExtResource( 2 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
